グループレポート完成

--- a/group07.tex
+++ b/group07.tex
@@ -171,6 +171,38 @@ AnimalWorldWm.dataを使用するようにしたうえでソースコード
     および後ろ向き推論に基づく質問応答システムを作成せよ．どのような応用事例を扱うかは，メンバーで話し合って決めること．
     なお，ユーザの質問は英語や日本語のような自然言語が望ましいが，難しければ変数を含むパターン等でも可とする．
 \end{screen}
+\subsection{手法29114031-大原拓人}
+私は自然言語（英語）によって質問を解釈する質問応答システムを担当した。
+時間内に完成できなかったため、考察のみ記す。
+
+\subsection{考察29114031大原拓人}
+自然言語で質問を解釈するシステムを作成するにあたって、解決すべき課題は
+以下のようになった。
+\begin{enumerate}
+\item 疑問詞を検出し変数に置き換える
+\item 疑問詞の種類によって変数を配置する場所が異なる
+\item 文脈によって変数を配置する場所が異なる
+\item クエリと異なり、答えとなる部分は1語ではない
+\item 3人称になったときの動詞の活用、名詞の複数形を検出する
+\end{enumerate}
+以上に挙げたものの解決策を挙げていくと、
+\begin{enumerate}
+\item OpenNLPのライブラリを用いて、文節chunkに分けることで
+    「whose car」のようなかたまりを検出できるので、それを変数に置き換えればよい
+\item 疑問詞の種類自体は少ないので、switch文で場合分けをすればよい
+\item これといった解決策が思いつかなかった。パターン照合のシステムと
+    連携して複数のパターンを探索する形であれば実現の可能性がある。
+\item こちらも、パターン照合のシステムに変数が1つ、2つ、3つ...のそれぞれの
+    パターンを引数として渡すことで実現の可能性がある。
+\item OpenNLPのライブラリに、用いられている単語が3人称の動詞や
+    複数形であっても、原型が何であるかを返すメソッドがあるので
+    パターン照合のシステム上に組み込むことで、比較が可能になる。
+\end{enumerate}
+しかし、以上に挙げた解決策を実装すると、文脈検出の探索と、複数単語の回答のための探索で
+プログラムの命令数が爆発的に増えると予想される。つまり、ルールや照合すべきパターンが増えると
+実用的な時間内に結果を返すことができない恐れがある。
+この爆発的な増加を抑える方法を模索していたが、時間内に
+その方法を見つけ出すことができなかったので実装には至らなかった。
 \subsection{手法29114086-飛世裕貴}
 本課題ではスポーツに関するデータファイルを作成し、そのデータファイルを用いて前向き推論、後ろ向き推論に基づく質問応答システムを作成する.以下に今回用いるデータファイル（data.txt、dataWm.txt）の一部を示す.\\
 
@@ -718,6 +750,10 @@ No rule produces a new assertion
 存在したりするといったことである。
 そのため、次回からは作ったクラスやメソッドを
 リストアップしていく必要があると思った。
+\section{感想29114031-大原拓人}
+今回実装が間に合わなかった要因として、自然言語での質疑応答システムが予想以上に複雑であったことと、
+完全な自然言語への対応を妥協し、もう少し単純なシステムで解決しようとしなかったことが挙げられる。
+グループのメンバーと相談し、ある程度の妥協案を出しておくべきであった。
 \section{感想29114095-野竹浩二朗}
 今回の課題では、BackwordChain、ForwordChainの2つがあり、
 片方でできてももう片方ではできなかったりと苦労した。
