--- a/031/29114031.tex
+++ b/031/29114031.tex
@@ -32,7 +32,7 @@
     29114031 大原 拓人\\
 %  {\small (グループレポートの場合は、グループ名および全員の学生番号と氏名が必要)}
 }
-\date{2019年11月19日}
+\date{2019年11月26日}
 
 \begin{document}
 \maketitle
@@ -73,21 +73,6 @@
     ルールの編集（追加，削除，変更）などについてもGUIで行えるようにせよ．
 \end{description}
 
-
-\section{課題4-1}
-\begin{screen}
-    まず，教科書3.2.1の「前向き推論」のプログラムと教科書3.2.2の
-    「後向き推論」のプログラムとの動作確認をし，前向き推論と後ろ向き推論の違いを説明せよ．
-    また，実行例を示してルールが選択される過程を説明せよ．説明の際には，LibreOfficeの
-    Draw（コマンド soffice --draw）などのドロー系ツールを使ってp.106 図3.11や
-    p.118 図3.12のような図として示すことが望ましい．
-\end{screen}
-\subsection{手法}
-    
-\subsection{実装}
-    
-\subsection{考察}
-    
 \section{課題4-2}
 \begin{screen}
     CarShop.data , AnimalWorld.data 等のデータファイルを
@@ -96,37 +81,40 @@
     なお，ユーザの質問は英語や日本語のような自然言語が望ましいが，難しければ変数を含むパターン等でも可とする．
 \end{screen}
     私は自然言語（英語）によって質問を解釈する質問応答システムを担当した。
-\subsection{手法}
-    OpenNLPのライブラリを利用し、入力した英文とデータベースの英文
-    を文節に分けて、比較しやすいようにする。
-\subsection{実装}
-    まず、文節に分けられたことがわかるように、与えられた文章を文節で
-    区切ったものを出力するgetChunklistメソッドをSentenceクラスに作成した。
-
-\begin{lstlisting}[caption=Sentence.java]
-    String getChunklist(){
-		String result = "";
-		for (Chunk chunk : this) {
-			result+="".concat("/").concat(chunk.getMorphemes());
-		}
-		return result;
-	}
-\end{lstlisting}
-    getMorphemesメソッドは以下のようになっている。
-\begin{lstlisting}[caption=Chunk.java]
-    public String getMorphemes(){
-		String line = "";
-		for (Morpheme word : Chunk.this) {
-			line+="".concat(word.getWord()).concat(" ");
-		}
-        return line;
-    }
-\end{lstlisting}
+    時間内に完成できなかったため、考察のみ記す。
 
 \subsection{考察}
-    
-
+    自然言語で質問を解釈するシステムを作成するにあたって、解決すべき課題は
+    以下のようになった。
+\begin{enumerate}
+    \item 疑問詞を検出し変数に置き換える
+    \item 疑問詞の種類によって変数を配置する場所が異なる
+    \item 文脈によって変数を配置する場所が異なる
+    \item クエリと異なり、答えとなる部分は1語ではない
+    \item 3人称になったときの動詞の活用、名詞の複数形を検出する
+\end{enumerate}
+    以上に挙げたものの解決策を挙げていくと、
+\begin{enumerate}
+    \item OpenNLPのライブラリを用いて、文節chunkに分けることで
+        「whose car」のようなかたまりを検出できるので、それを変数に置き換えればよい
+    \item 疑問詞の種類自体は少ないので、switch文で場合分けをすればよい
+    \item これといった解決策が思いつかなかった。パターン照合のシステムと
+        連携して複数のパターンを探索する形であれば実現の可能性がある。
+    \item こちらも、パターン照合のシステムに変数が1つ、2つ、3つ...のそれぞれの
+        パターンを引数として渡すことで実現の可能性がある。
+    \item OpenNLPのライブラリに、用いられている単語が3人称の動詞や
+        複数形であっても、原型が何であるかを返すメソッドがあるので
+        パターン照合のシステム上に組み込むことで、比較が可能になる。
+\end{enumerate}
+    しかし、以上に挙げた解決策を実装すると、文脈検出の探索と、複数単語の回答のための探索で
+    プログラムの命令数が爆発的に増えると予想される。つまり、ルールや照合すべきパターンが増えると
+    実用的な時間内に結果を返すことができない恐れがある。
+    この爆発的な増加を抑える方法を模索していたが、時間内に
+    その方法を見つけ出すことができなかったので実装には至らなかった。
 \section{感想}
+    今回実装が間に合わなかった要因として、自然言語での質疑応答システムが予想以上に複雑であったことと、
+    完全な自然言語への対応を妥協し、もう少し単純なシステムで解決しようとしなかったことが挙げられる。
+    グループのメンバーと相談し、ある程度の妥協案を出しておくべきであった。
 
 % 参考文献
 \begin{thebibliography}{99}
